@@ -2,6 +2,7 @@ opsi-script-beautifier (4.1.0.2-1) stable; urgency=medium
 
  * fix for sub and other primary sections
  * added gui version
+ * added openif repoort
 
 -- d.oertel <d.oertel@uib.de> Tue , 09 Nov 2020 15:00:00 + 0100
 
